change card back to show images. At this point it has a bug. Images doesn't fit the container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ small {
     position: relative;
     transform-style: preserve-3d; /*card turning*/
     transition: transform 0.5s; /*time in which card will turn*/
+    overflow: hidden;
 }
 .card-front, .card-back {
     height: 100%;
@@ -88,4 +89,16 @@ small {
 }
 .card-back {
     transform: rotateY(180deg); /*rotate by default*/
+}
+.card-image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.card-back img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0.5em;
 }
